--- a/HR_Project/HR_Project.Presentation/Views/Account/Login.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Account/Login.cshtml
@@ -51,7 +51,7 @@
                                     </div>
                                     <form class="user" asp-action="Login">
                                         <div class="form-group" data-validate="Email">
-                                            <input type="email" class="form-control form-control-user" name="Email"
+                                            <input type="text" class="form-control form-control-user" name="Email"
                                                    id="exampleInputEmail" aria-describedby="emailHelp"
                                                    placeholder="Email...">
                                         </div>
