advance ve abcense update delet işlemleri tamamlandı

--- a/HR_Project/HR_Project.Presentation/Views/Absence/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Absence/Index.cshtml
@@ -115,8 +115,8 @@
                                         @item.Condition.GetDisplayName()
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Düzenle", "Update", new { /* id=item.PrimaryKey */ }) |
-                                        @Html.ActionLink("Sil", "Delete", new { /* id=item.PrimaryKey */ })
+                                        @Html.ActionLink("Düzenle", "Update", new {  id=item.Id  }) |
+                                        @Html.ActionLink("Sil", "Delete", new {  id=item.Id  })
                                     </td>
                                 </tr>
                             }
