--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -97,8 +97,8 @@
                                         @item.Condition
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Düzenle", "Update", new { /* id=item.PrimaryKey */ }) |
-                                        @Html.ActionLink("Sil", "Delete", new { /* id=item.PrimaryKey */ })
+                                        @Html.ActionLink("Düzenle", "Update", new { id=item.Id }) |
+                                        @Html.ActionLink("Sil", "Delete", new { id=item.Id })
                                     </td>
                                 </tr>
                             }
