--- a/HR_Project/HR_Project.Presentation/Views/Absence/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Absence/Update.cshtml
@@ -1,4 +1,4 @@
-﻿@model HR_Project.Common.Models.VMs.AbsenceVM
+﻿@model HR_Project.Common.Models.DTOs.UpdateAbsenceDTO
 
 @{
     ViewData["Title"] = "Update";
@@ -12,6 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Update">
+            <input asp-for="Id" type="hidden" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Reason" class="control-label"></label>
