--- a/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
@@ -12,6 +12,9 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Update">
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Codition" />
+            <input type="hidden" asp-for="PersonnelId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Reason" class="control-label">Açıklama</label>
