--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -48,7 +48,7 @@
                                         {
                                             <p>
                                                 Ara: @Html.TextBox("searchText")
-                                                <input type="submit" placeholder="İzin tipi veya açıklama gir" />
+                                                <input type="submit" class="fa-search alert-light" placeholder="İzin tipi veya açıklama gir" />
                                             </p>
                                         }
 
