--- a/HR_Project/HR_Project.Presentation/Views/Home/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Home/Index.cshtml
@@ -6,7 +6,9 @@
 
 <h1>Index</h1>
 
-<div class="container-fluid">
+
+<- 
+@*<div class="container-fluid">
 
     <!-- Page Heading -->
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
@@ -348,4 +350,8 @@
         </div>
     </div>
 
-</div>
+</div>*@
+
+</->
+
+
