--- a/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
@@ -30,7 +30,7 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Oluştur" class="btn btn-primary" />
             </div>
         </form>
     </div>
