--- a/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
@@ -1,45 +1,44 @@
 ﻿@model HR_Project.Common.Models.DTOs.UpdateAdvanceDTO
 
 @{
-    ViewData["Title"] = "Update";
-    Layout = "~/Views/Shared/_GeneralLayout.cshtml";
+	ViewData["Title"] = "Update";
+	Layout = "~/Views/Shared/_GeneralLayout.cshtml";
 }
 
-<h1>Update</h1>
+<h1>Avansı Güncelle</h1>
 
-<h4>UpdateAdvanceDTO</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Update">
-            <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="Codition" />
-            <input type="hidden" asp-for="PersonnelId" />
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Reason" class="control-label">Açıklama</label>
-                <input asp-for="Reason" class="form-control" />
-                <span asp-validation-for="Reason" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Amount" class="control-label">Miktar</label>
-                <input asp-for="Amount" class="form-control" />
-                <span asp-validation-for="Amount" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastPaidDate" class="control-label">Talep Edilen Tarih</label>
-                <input asp-for="LastPaidDate" class="form-control" />
-                <span asp-validation-for="LastPaidDate" class="text-danger"></span>
-            </div>
-            
-            <div class="form-group">
-                <input type="submit" value="Oluştur" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
+	<div class="col-md-4">
+		<form asp-action="Update">
+			<input type="hidden" asp-for="Id" />
+			<input type="hidden" asp-for="Codition" />
+			<input type="hidden" asp-for="PersonnelId" />
+			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
+			<div class="form-group">
+				<label asp-for="Reason" class="control-label">Açıklama</label>
+				<input asp-for="Reason" class="form-control" />
+				<span asp-validation-for="Reason" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="Amount" class="control-label">Miktar</label>
+				<input asp-for="Amount" class="form-control" />
+				<span asp-validation-for="Amount" class="text-danger"></span>
+			</div>
+			<div class="form-group">
+				<label asp-for="LastPaidDate" class="control-label">Talep Edilen Tarih</label>
+				<input asp-for="LastPaidDate" class="form-control" />
+				<span asp-validation-for="LastPaidDate" class="text-danger"></span>
+			</div>
+
+			<div class="form-group">
+				<input type="submit" value="Güncelle" class="btn btn-primary" />
+			</div>
+		</form>
+	</div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+	<a class="h5" asp-action="Index">Listeye Geri Dön</a>
 </div>
 
