--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using HR_Project.Common.Models.VMs;
+@using HR_Project.Domain.Enum;
 @using X.PagedList;
 @model IPagedList<AdvanceVM>
 
@@ -88,7 +89,7 @@
                                         @item.Reason
                                     </td>
                                     <td>
-                                        @item.Amount
+                                        @item.Amount TL
                                     </td>
                                     <td>
                                         @item.LastPaidDate.ToShortDateString()
@@ -96,10 +97,24 @@
                                     <td>
                                         @item.Condition
                                     </td>
-                                    <td>
-                                        @Html.ActionLink("Düzenle", "Update", new { id=item.Id }) |
-                                        @Html.ActionLink("Sil", "Delete", new { id=item.Id })
-                                    </td>
+                                    @{
+                                        if (item.Condition == ConditionType.Pending)
+                                        {
+                                            <td>
+                                                <a asp-action="Update" asp-route-id="@item.Id">Düzenle</a>
+                                                |
+                                                <a asp-action="Delete" asp-route-id="@item.Id">Sil</a>
+                                            </td>
+                                        }
+                                        else
+                                        {
+                                            <td>
+                                                <a disabled="disabled">Düzenle</a>
+                                                |
+                                                <a disabled="disabled">Sil</a>
+                                            </td>
+                                        }
+                                    }
                                 </tr>
                             }
 
