toastr mesajlar eklendi

--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -187,6 +187,23 @@
         </div>
     </div>
 
+    @section Scripts {
+        @if (TempData.ContainsKey("Toastrsuccess"))
+        {
+            <script>
+                console.log('Toastr Başarı:', '@TempData["Toastrsuccess"]');
+                toastr.success('@TempData["Toastrsuccess"]');
+            </script>
+        }
+
+        @if (TempData.ContainsKey("Toastrerror"))
+        {
+            <script>
+                toastr.error('@TempData["Toastrerror"]');
+            </script>
+        }
+    }
+
 
     <!-- Bootstrap core JavaScript-->
     <script src="vendor/jquery/jquery.min.js"></script>
