--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -242,27 +242,27 @@
     </script>
 
 
-
-    <script>
-        var dropdown = document.getElementById("pageSizeDropdown");
-
-        dropdown.addEventListener("change", function () {
-            var selectedPageSize = this.value;
-
-
-            var url = "/Advance/Index?pageSize=" + selectedPageSize;
-
-
-            window.location.href = url;
-        });
-
-        function confirmDelete(id) {
-            if (confirm("Silmek istediğinize emin misiniz?")) {
-                window.location.href = "/Advance/Delete/?id=" + id;
-            } else {
-
-            }
-        }
-    </script>
-
 </body>
+
+@*
+<script>
+    var dropdown1 = document.getElementById("pageSizeDropdown");
+
+    dropdown1.addEventListener("change", function () {
+        var selectedPageSize = this.value;
+
+
+        var url = "/Advance/Index?pageSize=" + selectedPageSize;
+
+
+        window.location.href = url;
+    });
+
+    function confirmDelete(id) {
+        if (confirm("Silmek istediğinize emin misiniz?")) {
+            window.location.href = "/Advance/Delete/?id=" + id;
+        } else {
+
+        }
+    }
+</script>*@
