--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
@@ -98,6 +98,7 @@
 @*                    <input type="hidden" asp-for="Department.Name">*@
                     <input type="hidden" asp-for="Title">
                     <input type="hidden" asp-for="Email">
+                    <input type="hidden" asp-for="BloodType">
 
                     <div class="mt-5 text-center">
                         <input type="submit" asp-action="Update" asp-controller="Personnel" value="Kaydet" class="btn btn-primary profile-button" />
