--- a/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Update.cshtml
@@ -27,7 +27,7 @@
 			</div>
 			<div class="form-group">
 				<label asp-for="LastPaidDate" class="control-label">Talep Edilen Tarih</label>
-				<input asp-for="LastPaidDate" class="form-control" />
+				<input asp-for="LastPaidDate" class="form-control" type="date" />
 				<span asp-validation-for="LastPaidDate" class="text-danger"></span>
 			</div>
 
