--- a/HR_Project/HR_Project.Presentation/Views/Absence/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Absence/Create.cshtml
@@ -35,7 +35,7 @@
 			</div>
 			<div class="form-group">
 				<label asp-for="StartDate" class="control-label">Başlangıç Tarihi</label>
-				<input asp-for="StartDate" class="form-control" id="startDate" />
+				<input asp-for="StartDate" class="form-control" id="startDate" type="date" />
 				<span asp-validation-for="StartDate" class="text-danger"></span>
 			</div>
 			<div class="form-group">
