--- a/HR_Project/HR_Project.Presentation/Views/Advance/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Create.cshtml
@@ -34,7 +34,7 @@
 
             <div class="form-group">
                 <label asp-for="LastPaidDate" class="control-label">Talep Edilen Tarih</label>
-                <input asp-for="LastPaidDate" class="form-control" />
+                <input asp-for="LastPaidDate" class="form-control" type="date"/>
                 <span asp-validation-for="LastPaidDate" class="text-danger"></span>
             </div>
 
